--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     //3rd party library
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
     implementation "com.wajahatkarim3.easyvalidation:easyvalidation-core:1.0.1"
+    implementation "com.github.tozny:java-aes-crypto:1.1.0"
 
     def lifecycle_version = "2.2.0"
     // ViewModel
@@ -63,5 +64,6 @@ dependencies {
 
     //firebase dependencies
     implementation "com.google.firebase:firebase-auth-ktx:19.4.0"
+    implementation "com.google.firebase:firebase-firestore-ktx:21.7.1"
 
 }
