--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,18 +2,23 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.app.takenote">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".di.TakeNoteApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:fullBackupContent="true"
+        android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/app_icon_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.LoginActivity"/>
+        <activity android:name=".ui.AddProfileActivity" />
+        <activity android:name=".ui.ProfileActivity" />
         <activity android:name=".ui.HomeActivity" />
         <activity android:name=".ui.BaseActivity" />
         <activity android:name=".ui.SignUpActivity" />
-        <activity android:name=".ui.LoginActivity" />
         <activity android:name=".ui.AuthUIActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +27,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.MainActivity" />
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
     </application>
 
 </manifest>
