--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation "com.theartofdev.edmodo:android-image-cropper:2.8.0"
     implementation "com.github.bumptech.glide:glide:4.11.0"
     kapt "com.github.bumptech.glide:compiler:4.11.0"
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
     def lifecycle_version = "2.2.0"
     // ViewModel
