--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,15 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'com.google.gms.google-services'
-apply plugin: 'kotlin-kapt'
-
+//apply plugin: 'com.android.application'
+//apply plugin: 'kotlin-android'
+//apply plugin: 'kotlin-android-extensions'
+//apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'kotlin-kapt'
+plugins{
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'com.google.gms.google-services'
+    id 'kotlin-kapt'
+}
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
@@ -24,6 +30,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
@@ -31,7 +44,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -68,8 +81,8 @@ dependencies {
     implementation "org.koin:koin-android-viewmodel:$koin_version"
 
     //firebase dependencies
-    implementation "com.google.firebase:firebase-auth-ktx:19.4.0"
-    implementation "com.google.firebase:firebase-firestore-ktx:21.7.1"
+    implementation "com.google.firebase:firebase-auth-ktx:20.0.0"
+    implementation "com.google.firebase:firebase-firestore-ktx:22.0.0"
     implementation "com.google.firebase:firebase-storage-ktx:19.2.0"
 
 }
