--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,8 @@ dependencies {
     implementation "com.theartofdev.edmodo:android-image-cropper:2.8.0"
     implementation "com.github.bumptech.glide:glide:4.11.0"
     kapt "com.github.bumptech.glide:compiler:4.11.0"
-    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation "com.facebook.shimmer:shimmer:0.5.0"
+    implementation "in.codeshuffle:typewriterview:1.1.0"
 
     def lifecycle_version = "2.2.0"
     // ViewModel
@@ -84,5 +85,8 @@ dependencies {
     implementation "com.google.firebase:firebase-auth-ktx:20.0.0"
     implementation "com.google.firebase:firebase-firestore-ktx:22.0.0"
     implementation "com.google.firebase:firebase-storage-ktx:19.2.0"
+
+    //jetpack datastore
+//    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha02"
 
 }
