--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@
 //apply plugin: 'kotlin-android-extensions'
 //apply plugin: 'com.google.gms.google-services'
 //apply plugin: 'kotlin-kapt'
-plugins{
+plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
@@ -85,6 +85,8 @@ dependencies {
     implementation "com.google.firebase:firebase-auth-ktx:20.0.0"
     implementation "com.google.firebase:firebase-firestore-ktx:22.0.0"
     implementation "com.google.firebase:firebase-storage-ktx:19.2.0"
+    implementation "com.google.firebase:firebase-database-ktx:19.5.1"
+    implementation "com.firebaseui:firebase-ui-firestore:6.4.0"
 
     //jetpack datastore
 //    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha02"
