--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,8 +73,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-beta01"
 
     //Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.3.1'
 
     //koin
     def koin_version = "2.1.6"
@@ -83,9 +84,13 @@ dependencies {
     implementation "org.koin:koin-android-viewmodel:$koin_version"
 
     //firebase dependencies
-    implementation "com.google.firebase:firebase-auth-ktx:20.0.0"
+    implementation "com.google.firebase:firebase-auth-ktx:20.0.1"
     implementation "com.google.firebase:firebase-firestore-ktx:22.0.0"
     implementation "com.google.firebase:firebase-storage-ktx:19.2.0"
     implementation "com.google.firebase:firebase-database-ktx:19.5.1"
     implementation "com.firebaseui:firebase-ui-firestore:6.4.0"
+
+    //work manager
+    def work_version = "2.4.0"
+    implementation "androidx.work:work-runtime-ktx:$work_version"
 }
